--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,9 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.5",
     "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3"
   }
 }
