--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,39 +1,37 @@
 version: "3"
 services:
-  mcrdb:
-    image: mysql
-    working_dir: /mycleanroom/server
-    volumes:
-      - dbvol:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: r00tpassword
-      MYSQL_USER: dishang
-      MYSQL_PASSWORD: 12345
-      MYSQL_DATABASE: mycleanroom
-    networks:
-      mcr_net:
-        ipv4_address: 172.30.1.10
+  # mcrdb:
+  #   image: mysql
+  #   working_dir: /mycleanroom/server
+  #   volumes:
+  #     - dbvol:/var/lib/mysql
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: r00tpassword
+  #     MYSQL_USER: dishang
+  #     MYSQL_PASSWORD: 12345
+  #     MYSQL_DATABASE: mycleanroom
+  #   networks:
+  #     mcr_net:
+  #       ipv4_address: 172.30.1.10
   mcr_backend:
     image: dishang09/mcr_backend
     working_dir: /mycleanroom/server
     stdin_open: true
     ports:
-      - 13131:13131
+      - 13131:12345
     volumes:
       - appvol:/mycleanroom/server/logs
     networks:
       mcr_net:
         ipv4_address: 172.30.1.9
-    depends_on:
-      - mcrdb
     entrypoint: ["npm", "start"]
     environment:
-      DB_HOST: "mcr_pipeline_mcrdb_1"
-      DB_PORT: "3306"
-      DB_USER_NAME: "dishang"
-      DB_PASSWORD: "12345"
-      DB: "mycleanroom"
-      PORT: 13131
+      # DB_HOST: "mcr_pipeline_mcrdb_1"
+      # DB_PORT: "3306"
+      # DB_USER_NAME: "dishang"
+      # DB_PASSWORD: "12345"
+      # DB: "mycleanroom"
+      PORT: 12345
     restart: unless-stopped
   mcr_frontend:
     image: dishang09/mcr_frontend
@@ -49,7 +47,6 @@ services:
         ipv4_address: 172.30.1.11
 
 volumes:
-  dbvol:
   appvol:
 
 networks:
