--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
+    "joi": "^17.9.2",
     "mongoose": "^7.0.5",
     "winston": "^3.8.2"
   },
