--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.5",
     "winston": "^3.8.2"
   },
