--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - 13131:12345
     volumes:
-      - appvol:/mycleanroom/backend/logs
+      - serverlog:/mycleanroom/backend/logs
     networks:
       mcr_net:
         ipv4_address: 172.30.1.9
@@ -29,7 +29,7 @@ services:
         ipv4_address: 172.30.1.11
 
 volumes:
-  appvol:
+  serverlog:
 
 networks:
   mcr_net:
